publicip.tf
resource "azurerm_public_ip" "pip" {
  name                = "pip1"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  allocation_method   = "Static"

}
